--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DISCORDJS_BOT_TOKEN=ODUxNTM3MDQxNDI1OTU2ODk0.YL5tqw.ZhkFiZOKyG-5_9RNw6ss9uUJJTU
+DISCORDJS_BOT_TOKEN=
 WEBHOOK_ID=852264062914134048
 WEBHOOK_TOKEN=j33Fc_5kwynFvnBVZdsEgcKTM1ARfgVI1zuk_cPPD1RUVWkPDsDZAq46BJfV-O641dhG
