--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
-DISCORDJS_BOT_TOKEN=
+DISCORDJS_BOT_TOKEN=ODUxNTM3MDQxNDI1OTU2ODk0.YL5tqw.jMQZfV5-PQT8_q0wP1Bh2rSSq-8
 WEBHOOK_ID=852264062914134048
 WEBHOOK_TOKEN=j33Fc_5kwynFvnBVZdsEgcKTM1ARfgVI1zuk_cPPD1RUVWkPDsDZAq46BJfV-O641dhG
+
+if (command === 'help') {
+		message.channel.send('Supported commands :\n$help - Displays the help menu\n?ping - Should respond with a pong and dsplay the latency\n?avatar - Displays the avatar of the user.\n?server - Displays the name of the server\n?ping - Pings the bot, should respond with a pong!');
+
