--- a/package.json
+++ b/package.json
@@ -21,9 +21,5 @@
   "homepage": "https://github.com/tushar-nath/discord-bot#readme",
   "dependencies": {
     "@discordjs/opus": "^0.5.3",
-    "discord.js": "^12.5.3",
-    "dotenv": "^10.0.0",
-    "ffmpeg-static": "^4.3.0",
-    "ytdl-core": "^4.8.2"
-  }
+    "discord.js": "^12.5.3"
 }
